# psycopg2-tutorial

./: .env.example  .gitignore  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
psycopg2_tutorial/: __init__.py  db.py  log.py  queries.py
sql/: select-authors.sql  select-customers.sql
