[tool.poetry]
name = "psycopg2_tutorial"
version = "0.1.0"
description = "Connect to a PostgreSQL database and execute queries in Python."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/psycopg2-postgres-python/"
repository = "https://github.com/hackersandslackers/psycopg2-tutorial/"
documentation = "https://hackersandslackers.com/psycopg2-postgres-python/"
keywords = [
  "Postgres",
  "Python",
  "Databases",
  "SQLAlchemy",
  "SQL"
]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "*"
python-dotenv = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:init_script"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/psycopg2-tutorial/issues"